Change the signature of `sasha` and `satth` to not require "tag" type.

--- a/sasha.cabal
+++ b/sasha.cabal
@@ -76,6 +76,7 @@ test-suite sasha-tests
     , deepseq
     , lattices
     , sasha
+    , template-haskell
 
   -- test dependencies
   build-depends:
